# detframe

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: bench_render.cpp
docs/: architecture.mmd
include/df/: capture.hpp  compositor.hpp  frame_timer.hpp  framebuffer.hpp  math.hpp  renderer.hpp  scene.hpp
include/df/widgets/: attitude.hpp  compass.hpp  tape.hpp  text.hpp
src/: capture.cpp  compositor.cpp  frame_timer.cpp  framebuffer.cpp  main.cpp  math.cpp  renderer.cpp  scene.cpp
src/widgets/: attitude.cpp  compass.cpp  tape.cpp  text.cpp
tests/: test_determinism.cpp  test_math.cpp  test_renderer.cpp
tools/: frame_diff.py
